--- a/editor/sass/fonts.scss
+++ b/editor/sass/fonts.scss
@@ -55,7 +55,7 @@
     font-style: normal;
 }
 
-.font-pc-icon {
+.font-icon {
     font-family: 'pc-icon';
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
