--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -593,6 +593,11 @@ a:visited {
                 }
             }
         }
+        &.scripts {
+            > .title > .icon:after {
+                content: '\E423';
+            }
+        }
     }
 }
 
