--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -504,6 +504,9 @@ strong {
 
     .ui-label.no-assets {
         padding: 10px;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
 }
 
