--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -949,7 +949,7 @@ a:visited {
 
     &.tick {
         &:after, &:before {
-            color: $bcg-dark;
+            color: $bcg-darkest;
             background: transparent;
         }
 
@@ -962,7 +962,7 @@ a:visited {
             background: transparent;
         }
         &.checked:hover:after {
-            color: mix(#40d47e, $bcg-dark, 50%);
+            color: mix(#40d47e, $bcg-darkest, 50%);
         }
     }
 }
